# enzo

./: .gitignore  .mcp.json  Cargo.toml  README.md  deny.toml  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/enzo/: Cargo.toml
crates/enzo-adapters/: Cargo.toml
crates/enzo-adapters/src/: atp.rs  detect.rs  lib.rs
crates/enzo-browser/: Cargo.toml
crates/enzo-browser/src/: browser.rs  cdp.rs  launch.rs  lib.rs  page.rs
crates/enzo-client/: Cargo.toml
crates/enzo-client/src/: lib.rs  overlay.rs  surface.rs
crates/enzo-client/src/atp/: mod.rs
crates/enzo-client/src/gui/: mod.rs  terminal_view.rs  theme.rs
crates/enzo-client/src/renderer/: atlas.rs  mod.rs
crates/enzo-client/src/terminal/: mod.rs
crates/enzo-client/src/ui/: mod.rs
crates/enzo-client/tests/: ui_snapshot.rs
crates/enzo-compositor-spike/: Cargo.toml
crates/enzo-compositor-spike/src/: atlas.rs  grid.rs  main.rs  metrics.rs  renderer.rs
crates/enzo-daemon/: Cargo.toml
crates/enzo-daemon/src/: error.rs  lib.rs  pty.rs  session.rs  shell_integration.rs  state.rs
crates/enzo-daemon/src/atp/: ext.rs  mod.rs  tests.rs
crates/enzo-daemon/tests/: atp_integration.rs
crates/enzo-db/: Cargo.toml
crates/enzo-db/src/: driver.rs  duckdb.rs  introspect.rs  lib.rs  paginate.rs  pool.rs  pretty.rs  schema.rs  sqlite.rs  table.rs  tabs.rs
crates/enzo-editor/: Cargo.toml
crates/enzo-editor/src/: buffer.rs  format.rs  highlight.rs  lang.rs  lib.rs
crates/enzo-editor/src/dap/: mod.rs  transport.rs
crates/enzo-editor/src/lsp/: mod.rs  transport.rs
crates/enzo-git/: Cargo.toml
crates/enzo-git/src/: diff.rs  lib.rs  repo.rs  types.rs
crates/enzo-gpui/: Cargo.toml
crates/enzo-gpui/src/: atp.rs  browser.rs  database.rs  debug.rs  ide.rs  main.rs  terminal.rs  terminal_state.rs  text_input.rs  theme.rs  widgets.rs
crates/enzo-redact/: Cargo.toml
crates/enzo-redact/src/: lib.rs
crates/enzo-theme/: Cargo.toml
crates/enzo-theme/src/: builtin.rs  lib.rs  model.rs  registry.rs
crates/enzo-theme/themes/: amber-crt.toml  enzo-dark.toml  enzo-light.toml  gameboy-dmg.toml  matrix.toml  tokyo-night.toml
crates/enzo-vault/: Cargo.toml
crates/enzo-vault/src/: lib.rs
crates/enzo/src/: main.rs
design/: README.md  design-document.md  security-credentials.md
design/mockups/: browser.html  command-palette.html  cross-link.html  database.html  db-connection.html  ide.html  onboarding.html  terminal.html  theme-gallery.html  universal-prompt.html  unlock.html  workspaces.html
docs/: HANDOFF-gpui.md  HANDOFF.md  SPIKE-compositor.md
