[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/p0is0n/enzo"
rust-version = "1.96"

# Lints applied to every crate via `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Documentation lints we cover with prose elsewhere; keep signal high.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
