[package]
name = "enzo-browser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless browser automation — Chrome DevTools Protocol over WebSocket"
publish = false

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
url = "2"
futures-util = "0.3"
base64 = "0.22"
