[package]
name = "enzo-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU terminal client — wgpu compositor + ATP daemon connection"
publish = false

[lints]
workspace = true

[dependencies]
# Windowing + GPU
winit = "0.30"
wgpu = "22"
cosmic-text = "0.12"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

# VT100 / terminal emulation
vte = "0.13"

# ATP client (async)
tokio = { version = "1", features = ["full"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# Base64 (for ATP data frames)
base64 = "0.22"

[[bin]]
name = "enzo"
path = "src/bin/enzo.rs"
