[package]
name = "enzo-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Enzo GPU client — egui/eframe workspace UI over the ATP daemon connection"
publish = false

[lints]
workspace = true

[dependencies]
# GPU UI framework (wgpu-backed, immediate mode)
eframe = { version = "0.31", default-features = false, features = [
    "wgpu",
    "default_fonts",
] }
egui = "0.31"
egui_extras = "0.31"

# VT100 / terminal emulation
vte = "0.13"

# ATP client (async)
tokio = { version = "1", features = ["full"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# Base64 (for ATP data frames)
base64 = "0.22"

# PNG decode for the CDP browser screenshot stream
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
# Headless click + snapshot testing of the egui UI
egui_kittest = { version = "0.31", features = ["wgpu", "snapshot", "eframe"] }
# Integration tests are separate crates, so egui + eframe must be dev-deps too.
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "wgpu",
    "default_fonts",
] }

[[bin]]
name = "enzo-client"
path = "src/bin/enzo.rs"
