[package]
name = "enzo-compositor-spike"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Throwaway latency spike — gates v0.1 compositor decision"
publish = false

[lints]
workspace = true

[dependencies]
winit = "0.30"
wgpu = "22"
cosmic-text = "0.12"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "spike"
path = "src/main.rs"
