[package]
name = "enzo-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless Enzo daemon — owns PTYs, vault, LSP, DB, and the ATP socket"
publish = false

[lints]
workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# IPC / ATP socket (JSON-RPC 2.0 over Unix domain socket)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY management
portable-pty = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Credential vault
enzo-vault = { path = "../enzo-vault" }

[[bin]]
name = "enzo-daemon"
path = "src/bin/enzo-daemon.rs"
