[package]
name = "enzo-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Database query engine — Arrow record batches, async connection pool"
publish = false

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = { version = "54", features = ["prettyprint"] }
