[package]
name = "enzo-editor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LSP and DAP client — language services for the Enzo editor"
publish = false

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
lsp-types = "0.97"
url = "2"
base64 = "0.22"
