[package]
name = "enzo-git"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Git integration — status, diff, stage, commit, push/pull, branches, worktrees"
publish = false

[lints]
workspace = true

[dependencies]
git2 = "0.21"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
