[package]
name = "enzo-gpui"
version = "0.1.0"
edition = "2024"
publish = false
description = "Enzo GPU client — GPUI workspace UI over the ATP daemon connection"

# Isolated from the main workspace during the egui → GPUI migration so the
# heavy GPUI dependency tree can't destabilise the existing client build.
[workspace]

[dependencies]
# gpui has no rev here on purpose: it must resolve to the SAME source as
# gpui-component's `gpui = { git = zed }` so cargo unifies them into one gpui.
# The exact commit (df9c9f0, what this client was built against) is pinned in
# Cargo.lock for reproducibility.
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "x11",
    "wayland",
    "font-kit",
] }
# Production code editor (ropey buffer + tree-sitter highlight for ~35 langs +
# LSP). Pinned to the rev this client integrates against.
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "cda0fc7fd4e4809dd2a8bae0337ac43b49e9f675", features = [
    "tree-sitter-languages",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "cda0fc7fd4e4809dd2a8bae0337ac43b49e9f675" }
log = "0.4"

# ATP client (async, talks to enzo-daemon over a Unix socket)
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
unicode-segmentation = "1"
vte = "0.13"

[dev-dependencies]
image = "0.25"
